--- a/cars/templates/cars.html
+++ b/cars/templates/cars.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus Carros</title>
 </head>
-<body>
-    <h3>Só carro top!</h3>
-</body>
+{% block content %}
+    <body>
+        <h3>{{ cars.model }}</h3>
+    </body>
+{% endblock %}
 </html>
