--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,6 +73,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'cars_list' %}">Carros</a></li>
+        <li><a href="{% url 'new_car' %}">Novo carro</a></li>
       </ul>
     </nav>
   </header>
