--- a/cars/templates/new_car.html
+++ b/cars/templates/new_car.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <form action="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ new_car_form }}
+        <table>
+            {{ new_car_form.as_table }}
+        </table>
+        <input type="submit" value="Cadastrar" class="btn btn-primary">
     </form>
 {% endblock %}
